src/main/java/io/sparqlar/parser/SparqlParser.java
/* Generated By:JavaCC: Do not edit this line. SparqlParser.java */
package io.sparqlar.parser;
import java.io.*;
import java.util.*;
import io.sparqlar.sparqlardc.*;
import io.sparqlar.sparqlardc.propertypath.*;
import io.sparqlar.sparqlardc.querypatterns.*;
import io.sparqlar.sparqlardc.terms.*;
import io.sparqlar.sparqlardc.triplepatterns.*;

public class SparqlParser implements SparqlParserConstants {
    HashMap<String,SimpleURI> prefixes;
    public static SPARQL<?> parse(String arg) throws ParseException {
        SparqlParser parser = new SparqlParser(new StringReader(arg));
        return parser.input();
    }

  final public SPARQL<?> input() throws ParseException {
    List<Variable> vars=new ArrayList<Variable>();
    QueryPattern qp;
    boolean distinct=false;
    int limit=0;
    String filter=null;
    Token t=null;
    Token f=null;
    boolean ask=false;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
      case 2:
      case 3:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
        jj_consume_token(1);
        break;
      case 2:
        jj_consume_token(2);
        break;
      case 3:
        jj_consume_token(3);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 24:
      prefixes = prefixes();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 4:
      jj_consume_token(4);
                                                     ask=true;
      break;
    case 5:
      jj_consume_token(5);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
        jj_consume_token(6);
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 1:
          case 2:
          case 3:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_3;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 1:
            jj_consume_token(1);
            break;
          case 2:
            jj_consume_token(2);
            break;
          case 3:
            jj_consume_token(3);
            break;
          default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
                                                                                                                            distinct=true;
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      vars = variables();
      jj_consume_token(7);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
      case 2:
      case 3:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
        jj_consume_token(1);
        break;
      case 2:
        jj_consume_token(2);
        break;
      case 3:
        jj_consume_token(3);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(8);
    qp = queryPattern();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COND:
      f = jj_consume_token(COND);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(10);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
      jj_consume_token(11);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_5;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      t = jj_consume_token(N);
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    if(!ask && vars.isEmpty()){
        vars.addAll(qp.getVariableSet());
    }
    if(t!=null)limit=Integer.parseInt(t.toString());
    if(f!=null)filter=f.toString();
    {if (true) return new SPARQL<QueryPattern>(vars,qp,prefixes,distinct,limit,filter);}
    throw new Error("Missing return statement in function");
  }

  final public List<Variable> variables() throws ParseException {
    List<Variable> set = new ArrayList<Variable>();
    Variable v;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
      jj_consume_token(13);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_6;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    case 26:
      v = var();
                                           set.add(v);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_7;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 26:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_8;
        }
        v = var();
                                                                                      set.add(v);
        label_9:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 1:
          case 2:
          case 3:
            ;
            break;
          default:
            jj_la1[20] = jj_gen;
            break label_9;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 1:
            jj_consume_token(1);
            break;
          case 2:
            jj_consume_token(2);
            break;
          case 3:
            jj_consume_token(3);
            break;
          default:
            jj_la1[21] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                                                                          {if (true) return set;}
    throw new Error("Missing return statement in function");
  }

  final public QueryPattern queryPattern() throws ParseException {
    QueryPattern qp;
    HashSet<QueryPattern> set = new HashSet<QueryPattern>();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
      case 2:
      case 3:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
        jj_consume_token(1);
        break;
      case 2:
        jj_consume_token(2);
        break;
      case 3:
        jj_consume_token(3);
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      qp = unionQueryPattern();
      break;
    case 16:
    case 19:
    case 20:
    case 21:
    case 26:
    case AN:
    case URI:
      qp = triplePattern();
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                         set.add(qp);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 14:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_11;
      }
      jj_consume_token(14);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[27] = jj_gen;
          break label_12;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[28] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 8:
        qp = unionQueryPattern();
        break;
      case 16:
      case 19:
      case 20:
      case 21:
      case 26:
      case AN:
      case URI:
        qp = triplePattern();
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                         set.add(qp);
    }
        if(set.size()==1) {if (true) return qp;}
        {if (true) return new JoinQueryPattern<QueryPattern>(set);}
    throw new Error("Missing return statement in function");
  }

  final public QueryPattern unionQueryPattern() throws ParseException {
    QueryPattern qp;
    HashSet<QueryPattern> set = new HashSet<QueryPattern>();
    jj_consume_token(8);
    qp = queryPattern();
                            set.add(qp);
    jj_consume_token(10);
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
      case 2:
      case 3:
        ;
        break;
      default:
        jj_la1[30] = jj_gen;
        break label_13;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
        jj_consume_token(1);
        break;
      case 2:
        jj_consume_token(2);
        break;
      case 3:
        jj_consume_token(3);
        break;
      default:
        jj_la1[31] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(15);
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
      case 2:
      case 3:
        ;
        break;
      default:
        jj_la1[32] = jj_gen;
        break label_14;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
        jj_consume_token(1);
        break;
      case 2:
        jj_consume_token(2);
        break;
      case 3:
        jj_consume_token(3);
        break;
      default:
        jj_la1[33] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(8);
    qp = queryPattern();
                                                                                                                set.add(qp);
    jj_consume_token(10);
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
      case 2:
      case 3:
        ;
        break;
      default:
        jj_la1[34] = jj_gen;
        break label_15;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
        jj_consume_token(1);
        break;
      case 2:
        jj_consume_token(2);
        break;
      case 3:
        jj_consume_token(3);
        break;
      default:
        jj_la1[35] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 15:
        ;
        break;
      default:
        jj_la1[36] = jj_gen;
        break label_16;
      }
      jj_consume_token(15);
      label_17:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[37] = jj_gen;
          break label_17;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[38] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(8);
      qp = queryPattern();
                                                                                                                set.add(qp);
      jj_consume_token(10);
      label_18:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[39] = jj_gen;
          break label_18;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[40] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
     {if (true) return new UnionQueryPattern<QueryPattern>(set);}
    throw new Error("Missing return statement in function");
  }

  final public TriplePattern triplePattern() throws ParseException {
    Subject s;
    Predicate p;
    Objec o;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 26:
    case AN:
    case URI:
      s = subject();
      label_19:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[41] = jj_gen;
          break label_19;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[42] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      p = predicate();
      o = object();
      label_20:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[43] = jj_gen;
          break label_20;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[44] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
                                                                              {if (true) return new TriplePattern(s,p,o);}
      break;
    case 16:
      jj_consume_token(16);
      label_21:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[45] = jj_gen;
          break label_21;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[46] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(17);
      s = subject();
      label_22:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[47] = jj_gen;
          break label_22;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[48] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      p = propertyPath();
      o = object();
      label_23:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[49] = jj_gen;
          break label_23;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[50] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(18);
      label_24:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[51] = jj_gen;
          break label_24;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[52] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
                                                                                                                                     {if (true) return new Approx(s,(PropertyPath)p,o);}
      break;
    case 19:
      jj_consume_token(19);
      label_25:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[53] = jj_gen;
          break label_25;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[54] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(17);
      s = subject();
      label_26:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[55] = jj_gen;
          break label_26;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[56] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      p = propertyPath();
      o = object();
      label_27:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[57] = jj_gen;
          break label_27;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[58] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(18);
      label_28:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[59] = jj_gen;
          break label_28;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[60] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
                                                                                                                                    {if (true) return new Relax(s,(PropertyPath)p,o);}
      break;
    case 20:
      jj_consume_token(20);
      label_29:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[61] = jj_gen;
          break label_29;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[62] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(17);
      s = subject();
      label_30:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[63] = jj_gen;
          break label_30;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[64] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      p = propertyPath();
      o = object();
      label_31:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[65] = jj_gen;
          break label_31;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[66] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(18);
      label_32:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[67] = jj_gen;
          break label_32;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[68] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
                                                                                                                                   {if (true) return new Flex(s,(PropertyPath)p,o);}
      break;
    case 21:
      jj_consume_token(21);
      label_33:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[69] = jj_gen;
          break label_33;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
          jj_consume_token(1);
          break;
        case 2:
          jj_consume_token(2);
          break;
        case 3:
          jj_consume_token(3);
          break;
        default:
          jj_la1[70] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(8);
      s = subject();
      label_34:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 1:
        case 2:
        case 3:
          ;
          break;
        default:
          jj_la1[71] = jj_gen;
          break label_34;
        }
